completar manual de usuario y añadir como se ejecutaria